# ghidrall

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate-tests.py  ghidrall.py  ghidrall.yaml  lifter.multiple.xml  run_ghidrall_for_tests.py  run_seahorn_for_tests.py
ghidrall/tests/: CMakeLists.txt  argv_argc_imp_test.cpp  bad_diff_func.cpp  bound_loop_with_var.cpp  compound_condition.cpp  compound_condition_param.cpp  compound_condition_param_v2.cpp  compound_condition_v2.cpp  compound_condition_v3.cpp  condcall_one.cpp  condcall_two.cpp  empty.cpp  exclusive_ite.cpp  exclusive_ite_goal_in_else.cpp  fake_failed_test.cpp  global_var.cpp  global_var_nongoal.cpp  global_var_updates.cpp  goal_diff_func.cpp  independent_ite.cpp  independent_ite_param.cpp  input_inside_bound_loop.cpp  inter_func_narrow_to_wide_constraint.cpp  inter_func_param.cpp  inter_func_wide_to_narrow_constraint.cpp  inter_rv.cpp  invalid_compound_condition.cpp  invalid_compound_condition_param.cpp  invalid_compound_condition_v2.cpp  invalid_condition.cpp  invalid_inter_func.cpp  invalid_nested_conditions.cpp  linear_flow.cpp  loop_even_odd.cpp  loop_even_odd_nongoal.cpp  multi_call_inter_cond.cpp  multi_call_inter_cond_else.cpp  multi_call_inter_seq.cpp  multiple_ite.cpp  multivar_compound_condition.cpp  (+32 more)
ghidrall/tests/binaries/one/: input_inside_bound_loop_v4_64  input_inside_bound_loop_v6_64
ghidrall/tests/binaries/pathanalyzer/one/: bound_loop_with_var_32  bound_loop_with_var_64  call_trace_v1_32  call_trace_v1_64  call_trace_v2_32  call_trace_v2_64  call_trace_v3_32  call_trace_v3_64  call_trace_v4_32  call_trace_v4_64  call_trace_v5_32  call_trace_v5_64  call_trace_v6_32  call_trace_v6_64  compound_condition_param_v1_32  compound_condition_param_v1_64  compound_condition_param_v2_32  compound_condition_param_v2_64  compound_condition_v1_32  compound_condition_v1_64  compound_condition_v2_32  compound_condition_v2_64  compound_condition_v3_32  compound_condition_v3_64  condcall_v1_32  condcall_v1_64  condcall_v2_32  condcall_v2_64  down_call_chain_32  down_call_chain_64  empty_32  empty_64  endless_loop_32  endless_loop_64  exception_32  exception_64  exclusive_ite_32  exclusive_ite_64  exclusive_ite_goal_in_else_32  exclusive_ite_goal_in_else_64  (+136 more)
ghidrall/tests/binaries/pathanalyzer/two/: args_v1_32  args_v1_64  bound_loop_with_var_32  bound_loop_with_var_64  call_trace_v1_32  call_trace_v1_64  call_trace_v2_32  call_trace_v2_64  call_trace_v3_32  call_trace_v3_64  call_trace_v4_32  call_trace_v4_64  call_trace_v5_32  call_trace_v5_64  call_trace_v6_32  call_trace_v6_64  compound_condition_param_v1_32  compound_condition_param_v1_64  compound_condition_param_v2_32  compound_condition_param_v2_64  compound_condition_v1_32  compound_condition_v1_64  compound_condition_v2_32  compound_condition_v2_64  compound_condition_v3_32  compound_condition_v3_64  condcall_v1_32  condcall_v1_64  condcall_v2_32  condcall_v2_64  down_call_chain_32  down_call_chain_64  empty_32  empty_64  endless_loop_32  endless_loop_64  exception_32  exception_64  exclusive_ite_32  exclusive_ite_64  (+138 more)
ghidrall/tests/binaries/pathanalyzer/zero/: args_v1_32  args_v1_64  bound_loop_with_var_32  bound_loop_with_var_64  call_trace_v1_32  call_trace_v1_64  call_trace_v2_32  call_trace_v2_64  call_trace_v3_32  call_trace_v3_64  call_trace_v4_32  call_trace_v4_64  call_trace_v5_32  call_trace_v5_64  call_trace_v6_32  call_trace_v6_64  compound_condition_param_v1_32  compound_condition_param_v1_64  compound_condition_param_v2_32  compound_condition_param_v2_64  compound_condition_v1_32  compound_condition_v1_64  compound_condition_v2_32  compound_condition_v2_64  compound_condition_v3_32  compound_condition_v3_64  condcall_v1_32  condcall_v1_64  condcall_v2_32  (+149 more)
ghidrall/tests/binaries/two/: input_inside_bound_loop_v4_32  input_inside_bound_loop_v5_32  input_inside_bound_loop_v5_64
ghidrall/tests/binaries/zero/: input_inside_bound_loop_v5_64  input_inside_bound_loop_v6_32
ghidrall/tests/cgc-tests/: 3D_Image_Toolkit  3D_Image_Toolkit_patched  AIS-Lite  AIS-Lite_patched  ASCII_Content_Server  ASCII_Content_Server_patched  ASL6parse  ASL6parse_patched  A_Game_of_Chance_1  A_Game_of_Chance_2  A_Game_of_Chance_2_patched  A_Game_of_Chance_3  A_Game_of_Chance_3_patched  A_Game_of_Chance_4  A_Game_of_Chance_4_patched  A_Game_of_Chance_5  A_Game_of_Chance_5_patched  A_Game_of_Chance_6  A_Game_of_Chance_6_patched  Accel  Accel_patched  Audio_Visualizer  Audio_Visualizer_patched  Azurad  Azurad_patched  BIRC_1  BIRC_1_patched  BIRC_2  BIRC_2_patched  Barcoder  Barcoder_patched  BitBlaster  BitBlaster_patched  Bloomy_Sunday  Bloomy_Sunday_patched  Blubber_1  Blubber_1_patched  Blubber_2  Blubber_2_patched  Blubber_3  (+498 more)
ghidrall/tests/cgc-tests/results/: 3D_Image_Toolkit.ll  3D_Image_Toolkit_patched.ll  AIS-Lite.ll  AIS-Lite_patched.ll  ASCII_Content_Server.ll  ASCII_Content_Server_patched.ll  ASL6parse.ll  ASL6parse_patched.ll  A_Game_of_Chance_1.ll  A_Game_of_Chance_1_patched.ll  A_Game_of_Chance_2.ll  A_Game_of_Chance_2_patched.ll  A_Game_of_Chance_3.ll  A_Game_of_Chance_3_patched.ll  A_Game_of_Chance_4.ll  A_Game_of_Chance_4_patched.ll  A_Game_of_Chance_5.ll  A_Game_of_Chance_5_patched.ll  A_Game_of_Chance_6.ll  A_Game_of_Chance_6_patched.ll  Accel.ll  Accel_patched.ll  Audio_Visualizer.ll  Audio_Visualizer_patched.ll  Barcoder.ll  Barcoder_patched.ll  BitBlaster.ll  BitBlaster_patched.ll  Bloomy_Sunday.ll  Bloomy_Sunday_patched.ll  Board_Game.ll  Board_Game_patched.ll  BudgIT.ll  BudgIT_patched.ll  CGC_File_System.ll  CGC_File_System_patched.ll  CGC_Image_Parser.ll  CGC_Image_Parser_patched.ll  CGC_Video_Format_Parser_and_Viewer.ll  CGC_Video_Format_Parser_and_Viewer_patched.ll  (+273 more)
ghidrall/tests/results/: README.md  lit.cfg  seatest.py
(+958 files in other folders)
